<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flNumeros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerificarSomaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bck_color"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="63dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:contentDescription="@string/txt_recorte_logo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBarraStatus"
            app:srcCompat="@drawable/olympus" />

        <TextView
            android:id="@+id/txtAtencao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:contentDescription="@string/txt_soma"
            android:text="@string/txt_soma"
            android:textAlignment="center"
            android:textColor="@color/txt_title"
            android:textColorLink="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <EditText
            android:id="@+id/ettResultado"
            android:layout_width="206dp"
            android:layout_height="53dp"
            android:layout_marginTop="35dp"
            android:autofillHints="@string/txt_valor_soma"
            android:ems="8"
            android:hint="@string/txt_valor_soma"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/cor_nome_app"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnConferir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAtencao"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btnConferir"
            style="@style/Widget.Game.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_verificar"
            android:textColor="#FFFF"
            app:layout_constraintBottom_toTopOf="@+id/ivResultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ettResultado" />

        <Button
            android:id="@+id/btnHome"
            style="@style/Widget.Game.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/btn_home"
            android:textColor="#FFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivResultado" />

        <ImageView
            android:id="@+id/ivResultado"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:background="@drawable/borda_verde_layout"
            android:contentDescription="@string/txt_desc_img_resultado"
            android:src="@drawable/question_square"
            app:layout_constraintBottom_toTopOf="@+id/btnHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConferir" />

        <ImageView
            android:id="@+id/ivBarraStatus"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:contentDescription="@string/txt_barra_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/borda_status_layout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>