<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bck_color"
    tools:context=".view.MostrarNumerosActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:contentDescription="@string/txt_recorte_logo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBarraStatus"
        app:srcCompat="@drawable/olympus" />

    <TextView
        android:id="@+id/txtAtencao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/txt_atencao"
        android:textAlignment="center"
        android:textColor="@color/txt_title"
        android:textColorLink="@android:color/holo_red_light"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <FrameLayout
        android:id="@+id/flNumeros"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAtencao">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNrAleatorios"
                android:layout_width="206dp"
                android:layout_height="125dp"
                android:text="@string/txt_qq_txt"
                android:textAlignment="center"
                android:textColor="#E65100"
                android:textSize="44sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/ivBarraStatus"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:contentDescription="@string/txt_barra_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/borda_status_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>